# DDLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
MDD/: CMakeLists.txt  mdd.hpp  mdds.hpp
MDD/Builders/: Grid.cpp  Grid.hpp  Table.cpp  Table.hpp  Transitions.hpp  base.hpp
MDD/Constructions/: MDDBuilder.hpp  MDDBuilderGrid.cpp
MDD/Core/: MDD.cpp  MDD.hpp  Triplet.cpp  Triplet.hpp
MDD/DataStructures/: TableBuilder.cpp  TableSort.hpp  list.hpp  orderedList.hpp
MDD/DynamicProg/: DynP.hpp
MDD/Operations/: Apply.cpp  Apply.hpp  Reduce.cpp  Reduce.hpp  Search.hpp
MDD/Relax/Partitioners/: setPartitioner.hpp
MDD/Restricted/: DPCreation.hpp  reduce.hpp
MDD/Utils/: ChronoP.cpp  ChronoP.hpp  union.hpp
Utils/: CMakeLists.txt  License.md  mdds.hpp
Utils/Builders/: Automaton.cpp  Automaton.hpp  DynProg.cpp  DynProg.hpp  Transitions.cpp
Utils/Core/: Triplet.hpp
Utils/DataStructures/: BitSets.cpp
Utils/Operations/: Apply.cpp  Apply.hpp  Search.hpp
Utils/Proba/: probdf.hpp
Utils/Relax/: Utils.hpp
Utils/Relax/Creation/: DPRelaxCreation.hpp
Utils/Relax/Reduction/: reduce.hpp
Utils/Utils/: MDDInfos.cpp
apps/: CMakeLists.txt
apps/src/: AllDifferent.cpp  MISP.cpp  SetCover.cpp
benchmarks/: CMakeLists.txt
benchmarks/MISP/: bench.hpp
benchmarks/SetCover/: bench.hpp
benchs/: CMakeLists.txt
benchs/src/: RelaxIndependentSet.hpp  main.cpp
benchs/src/AllDifferent/: AllDiffBench.hpp
benchs/src/MISP/: RelaxIndependentSet.hpp
benchs/src/SetCover/: runnable.hpp
models/: AllDifferent.hpp  CMakeLists.txt  DynSum.hpp  IndepSet.hpp  SetCover.hpp
src/: CMakeLists.txt  mdds.hpp
src/Algorithms/: paths.hpp
src/Constructions/: BuilderFromAutomaton.cpp  BuilderFromAutomaton.hpp  BuilderFromDynProg.cpp  BuilderFromDynProg.hpp  BuilderTransitions.cpp  BuilderTransitions.hpp  MDDBuilderFromTable.cpp  MDDBuilderFromTable.hpp  MDDBuilderGrid.hpp
src/Core/: MDD.cpp  MDD.hpp  Triplet.cpp  Triplet.hpp
src/DataStructures/: BitSets.cpp  BitSets.hpp  SparseSet.hpp  Table.hpp  TableBuilder.hpp  TableSort.cpp
src/DynamicProg/: ApplyDP.hpp  DynP.hpp  DynSum.hpp  IndepSet.hpp  SetCover.hpp
src/DynamicProg/Constraints/: AllDifferent.hpp
src/DynamicProg/MISP/: mispbench.hpp
src/DynamicProg/SetCover/: bench.hpp
src/Operations/: Reduce.hpp  ReduceDFSMap.hpp
src/Proba/: confidence.hpp
src/Relax/: Partitioner.hpp  State.hpp
src/Relax/Creation/: DPRelaxCreation.hpp
src/Relax/Partitioners/: StatePartitioner.hpp  setPartitioner.hpp
src/Relax/Reduction/: reduce.hpp
src/Restricted/: DPCreation.hpp
src/Utils/: MDDInfos.hpp  ThreadPool.h  union.hpp  utils.hpp
test/: CMakeLists.txt
test/Builder/: testBuilder.cpp  testDPBuild.cpp
test/Core/: testNode.cpp
test/DataStructures/: testLists.cpp  testTable.cpp
test/Help/: testHelper.hpp
test/Operations/: testApply.cpp  testReduce.cpp
test/Relax/: testRelaxDPCreation.cpp  testRelaxReduce.cpp
test/Restricted/: testRestrictedDPCreation.cpp
test/Utils/: testMDDInfos.cpp
